1.1.1 / xx.xx.xxxx
==================
* dodanie do QUnit pluginu Composite, aby testowanie stało się przyjemniejsze
* upgrade biblioteki do testów QUnit
* usunięcie rzucania wyjątku w przypadku wywołania zdarzenia z elementu bez takiego zdarzenia pklib.event.trigger

1.1.0 / 27.05.2012
==================
* usunięcie modulu pklib.json na rzecz nowego projektu https://github.com/piecioshka/text-plain-logger
* poprawką błędu w pklib.glass
* zmiana nazw funkcji których nazwy były w zapisie camelCase ( aB )na underscore ( a_b )
* poprawienie JSDoc'a

1.0.5 / 01.04.2012
==================
* nowy pakiet pklib.common - do wspólnego użytku
* zmiana nazw funkcji w pklib.cookie
* utworzenie nowego namespace pklib.ui
* przeniesienie loader, glass, message, utils.size do namespace'a ui
* wprowadzenie poprawek zgłoszonych przez Inspection-JS
* poprawienie JSDoc'a
* usunięcie uniwersalnej metody do znajdywania elementów pklib.dom.get

1.0.4 / 29.01.2012
==================
* poprawienie nazw parametrów
* poprawienie JSDoc'a
* dodanie usługi pojedynczych testów
* dodanie obsługi timeout'a do pklib.ajax
* dodanie pklib.array.index do wyznaczania liczby porządkowej elementu
* poprawienie usuwania i odnajdywania klasy css w elemencie DOM
* dodanie metody pklib.dom.isElement do sprawdzania czy obiekt jest Elementem
* poprawienie pklib.dom.byId 
* przeniesienie metody pklib.dom.get do listy TODO i oznaczenie jako feature
* optymalizacja metody pklib.dom.center oraz pklib.dom.maximize
* dodanie metody pklib.dom.remove do usuniecia elementu z drzewa DOM
* poprawnie całego obiektu pklib.event
* dodanie metody pklib.event.get do pobrania eventów elementu
* dodanie metody pklib.event.trigger do uruchomienia konkretnego eventu
* poprawienie metody pklib.string.slice
* usuniecie obiektu pklib.validate

1.0.3 / 25.01.2012
==================
* poprawienie licencji
* dodanie walidacji przez JSLint'a ( http://www.jslint.com/ )
* poprawienie komentarzy JSDoc ( http://en.wikipedia.org/wiki/JSDoc )
